修正上线代码所需格式